added a check file for the network mostly works fine but astill have bugs with the network

--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Matrix_library.c" />
     <ClCompile Include="Network.c" />
     <ClCompile Include="Neuron.c" />
+    <ClCompile Include="test_library.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
