--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="active_functions.h" />
+    <ClInclude Include="classification.h" />
     <ClInclude Include="layer.h" />
     <ClInclude Include="tensor.h" />
     <ClInclude Include="network.h" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="Activation_Functions.c" />
     <ClCompile Include="check.c" />
+    <ClCompile Include="Classification.c" />
     <ClCompile Include="Layer.c" />
     <ClCompile Include="Loss_Functions.c" />
     <ClCompile Include="Tensor_library.c" />
