ádd classification struct and methods network works with any amount of dimenstions of a tensor. next is a claasifcation image network and reinforcment learning

--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Classification.c" />
     <ClCompile Include="Layer.c" />
     <ClCompile Include="Loss_Functions.c" />
+    <ClCompile Include="reinforcement_network.c" />
     <ClCompile Include="Tensor_library.c" />
     <ClCompile Include="Network.c" />
     <ClCompile Include="Neuron.c" />
