--- a/machine_learning_library/machine_learning_library.vcxproj.filters
+++ b/machine_learning_library/machine_learning_library.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="classification.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="csv_parser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tensor_library.c">
@@ -67,6 +70,9 @@
     </ClCompile>
     <ClCompile Include="reinforcement_network.c">
       <Filter>Source Files\reanforcment_learning_project</Filter>
+    </ClCompile>
+    <ClCompile Include="csv_parser.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
