added regular hashmap and some ground work for reinforcment learning for later

--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -142,7 +142,9 @@
     <ClInclude Include="active_functions.h" />
     <ClInclude Include="classification.h" />
     <ClInclude Include="csv_parser.h" />
+    <ClInclude Include="hashmap.h" />
     <ClInclude Include="layer.h" />
+    <ClInclude Include="reinforcement.h" />
     <ClInclude Include="tensor.h" />
     <ClInclude Include="network.h" />
     <ClInclude Include="neuron.h" />
@@ -152,6 +154,7 @@
     <ClCompile Include="check.c" />
     <ClCompile Include="Classification.c" />
     <ClCompile Include="csv_parser.c" />
+    <ClCompile Include="hashmap.c" />
     <ClCompile Include="Layer.c" />
     <ClCompile Include="Loss_Functions.c" />
     <ClCompile Include="reinforcement_network.c" />
