--- a/machine_learning_library/machine_learning_library.vcxproj.filters
+++ b/machine_learning_library/machine_learning_library.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClCompile Include="rnn_layer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="genral_layer.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
