added lstm neuron(layer in later commit). added pointer to the train function in network struct based on type. fixed classifcation for the new updates. fixed tokenizer. added new add_inplace_more function in tensor library.

--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="general_layer.h" />
     <ClInclude Include="hashmap.h" />
     <ClInclude Include="dense_layer.h" />
+    <ClInclude Include="lstm_neuron.h" />
     <ClInclude Include="reinforcement.h" />
     <ClInclude Include="rnn_layer.h" />
     <ClInclude Include="rnn_neuron.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="hashmap.c" />
     <ClCompile Include="dense_Layer.c" />
     <ClCompile Include="Loss_Functions.c" />
+    <ClCompile Include="lstm_neuron.c" />
     <ClCompile Include="reinforcement_network.c" />
     <ClCompile Include="rnn_layer.c" />
     <ClCompile Include="rnn_neuron.c" />
