--- a/machine_learning_library/machine_learning_library.vcxproj.filters
+++ b/machine_learning_library/machine_learning_library.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="general_layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lstm_neuron.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tensor_library.c">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="genral_layer.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lstm_neuron.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
