created lstm layer adn added it to genral layer. tested it in test library and everything works

--- a/machine_learning_library/machine_learning_library.vcxproj.filters
+++ b/machine_learning_library/machine_learning_library.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="lstm_neuron.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lstm_layer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tensor_library.c">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lstm_neuron.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lstm_layer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
