--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="general_layer.h" />
     <ClInclude Include="hashmap.h" />
     <ClInclude Include="dense_layer.h" />
+    <ClInclude Include="lstm_layer.h" />
     <ClInclude Include="lstm_neuron.h" />
     <ClInclude Include="reinforcement.h" />
     <ClInclude Include="rnn_layer.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="hashmap.c" />
     <ClCompile Include="dense_Layer.c" />
     <ClCompile Include="Loss_Functions.c" />
+    <ClCompile Include="lstm_layer.c" />
     <ClCompile Include="lstm_neuron.c" />
     <ClCompile Include="reinforcement_network.c" />
     <ClCompile Include="rnn_layer.c" />
