added optimzer for the networks 4 new types. all the optimszers work (need to implement adam). need to add to add optimizer for python binding

--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="dense_layer.h" />
     <ClInclude Include="lstm_layer.h" />
     <ClInclude Include="lstm_neuron.h" />
+    <ClInclude Include="optimizers.h" />
     <ClInclude Include="reinforcement.h" />
     <ClInclude Include="rnn_layer.h" />
     <ClInclude Include="rnn_neuron.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Loss_Functions.c" />
     <ClCompile Include="lstm_layer.c" />
     <ClCompile Include="lstm_neuron.c" />
+    <ClCompile Include="optimizers.c" />
     <ClCompile Include="reinforcement_network.c" />
     <ClCompile Include="rnn_layer.c" />
     <ClCompile Include="rnn_neuron.c" />
