--- a/machine_learning_library/machine_learning_library.vcxproj.filters
+++ b/machine_learning_library/machine_learning_library.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="export.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="optimizers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tensor_library.c">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lstm_layer.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="optimizers.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
