--- a/machine_learning_library/machine_learning_library.vcxproj
+++ b/machine_learning_library/machine_learning_library.vcxproj
@@ -149,13 +149,13 @@
     <ClInclude Include="lstm_layer.h" />
     <ClInclude Include="lstm_neuron.h" />
     <ClInclude Include="optimizers.h" />
-    <ClInclude Include="reinforcement.h" />
     <ClInclude Include="rnn_layer.h" />
     <ClInclude Include="rnn_neuron.h" />
     <ClInclude Include="tensor.h" />
     <ClInclude Include="network.h" />
     <ClInclude Include="neuron.h" />
     <ClInclude Include="tokenizer.h" />
+    <ClInclude Include="weights_Initialization.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Activation_Functions.c" />
@@ -169,7 +169,6 @@
     <ClCompile Include="lstm_layer.c" />
     <ClCompile Include="lstm_neuron.c" />
     <ClCompile Include="optimizers.c" />
-    <ClCompile Include="reinforcement_network.c" />
     <ClCompile Include="rnn_layer.c" />
     <ClCompile Include="rnn_neuron.c" />
     <ClCompile Include="Tensor_library.c" />
@@ -177,6 +176,7 @@
     <ClCompile Include="Neuron.c" />
     <ClCompile Include="test_library.c" />
     <ClCompile Include="tokenizer.c" />
+    <ClCompile Include="weights_initialization.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
